--- a/config.properties
+++ b/config.properties
@@ -1,9 +1,10 @@
-id_cabina=156A
+id_cabina=112
 host=192.168.1.200
-ip_destino=192.168.1.200
+ip_destino=http://190.12.101.198:5000/
+server_password=KxZVM@&0$SOx_112
+server_username=112
 log_path=/home/user/LECTOR_RFID/log.txt
-log_max_size=570000
+log_max_size=10000
 mail_cuenta=lector.antena.mail@gmail.com
 mail_password=bVb56XSm6c7PSrj
 mail_destino=lector.antena.mail@gmail.com
-
